{
  "version": 4,
  "terraform_version": "0.12.12",
  "serial": 66,
  "lineage": "3d3bb935-e325-6f03-ca43-366c3be4039c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb_mancave",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:434741005178:loadbalancer/app/mancave-alb/16a44e7e815755b1",
            "arn_suffix": "app/mancave-alb/16a44e7e815755b1",
            "dns_name": "mancave-alb-235419898.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:434741005178:loadbalancer/app/mancave-alb/16a44e7e815755b1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "mancave-alb",
            "security_groups": [
              "sg-0a4e6a0322401400a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-1439b935"
              },
              {
                "subnet_id": "subnet-4481fe4a"
              },
              {
                "subnet_id": "subnet-48bb3e2e"
              },
              {
                "subnet_id": "subnet-7279ff2d"
              },
              {
                "subnet_id": "subnet-84c095c9"
              },
              {
                "subnet_id": "subnet-f6874fc7"
              }
            ],
            "subnets": [
              "subnet-1439b935",
              "subnet-4481fe4a",
              "subnet-48bb3e2e",
              "subnet-7279ff2d",
              "subnet-84c095c9",
              "subnet-f6874fc7"
            ],
            "vpc_id": "vpc-30ca1b4d",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "depends_on": [
            "aws_security_group.allow_ssh",
            "data.aws_subnet_ids.mancave"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:434741005178:listener/app/mancave-alb/16a44e7e815755b1/944d9136e5ed0bab",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:434741005178:targetgroup/tf-example-lb-tg/1ad9ae3b6f4fbaff",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:434741005178:listener/app/mancave-alb/16a44e7e815755b1/944d9136e5ed0bab",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:434741005178:loadbalancer/app/mancave-alb/16a44e7e815755b1",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.alb_mancave",
            "aws_lb_target_group.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "test",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:434741005178:targetgroup/tf-example-lb-tg/1ad9ae3b6f4fbaff",
            "arn_suffix": "targetgroup/tf-example-lb-tg/1ad9ae3b6f4fbaff",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:434741005178:targetgroup/tf-example-lb-tg/1ad9ae3b6f4fbaff",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-example-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-30ca1b4d"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:434741005178:security-group/sg-0a4e6a0322401400a",
            "description": "ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a4e6a0322401400a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Java",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "434741005178",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alow ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-30ca1b4d"
          }
        }
      ]
    }
  ]
}